Annotated and generated API docs for: - auth api - device api - websocket api Made small changes to user api annotations Setup http-swagger to serve docs at http://localhost:8000/api/swagger/index.html
